--- a/design-a-contact-form/styles.css
+++ b/design-a-contact-form/styles.css
@@ -31,7 +31,7 @@ button {
   background-color: #cbf3f0;
   font-size: 1.1em;
   border-radius: 7px;
-  diplay: inline-block;
+  display: inline-block;
   margin: 10px 75% 10px 35%;
   transition: background-color 0.5s ease;
 }
